clusters/takeout/apps/baobab/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: baobab
  labels:
    app: baobab
spec:
  serviceName: baobab
  selector:
    matchLabels:
      app: baobab
  replicas: 1
  template:
    metadata:
      labels:
        app: baobab
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app.kubernetes.io/instance
                operator: In
                values:
                - default-qbittorrent
            topologyKey: kubernetes.io/hostname
      containers:
        - name: baobab
          image: tyzbit/baobab:latest
          imagePullPolicy: Always
          command:
          - sh
          - -c
          - |
            cp /usr/share/glib-2.0/schemas/org.gnome.baobab.gschema.xml /config/org.gnome.baobab.gschema.xml &&
            rm /usr/share/glib-2.0/schemas/org.gnome.baobab.gschema.xml &&
            ln -s /config/org.gnome.baobab.gschema.xml /usr/share/glib-2.0/schemas/org.gnome.baobab.gschema.xml &&
            /startup.sh
          volumeMounts:
            - name: baobab-config
              mountPath: /config
            - name: braavos
              mountPath: /mount/braavos
            - name: downloads
              mountPath: /mount/downloads
            - name: amazon-kubernetes-storage
              mountPath: /mount/amazon-kubernetes-storage
          resources:
            requests: 
              cpu: 500m
            limits:
              memory: 512Mi
      volumes:
        - name: braavos
          persistentVolumeClaim:
            claimName: braavos-media-pvc
        - name: downloads
          persistentVolumeClaim:
            claimName: qbittorrent-downloads
        - name: amazon-kubernetes-storage
          persistentVolumeClaim:
            claimName: amazon-kubernetes-storage
      imagePullSecrets:
        - name: docker-hub
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: baobab-config
      spec:
        resources:
          requests:
            storage: 128Mi
        volumeMode: Filesystem
        accessModes:
          - ReadWriteOnce
