clusters/takeout/apps/baobab/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: baobab
spec:
  type: LoadBalancer
  selector:
    app: baobab
  ports:
    - name: tcp
      protocol: TCP
      port: 6080
      targetPort: 6080
